# oxygine-project

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
data/: 1.json
data/xmls/: ui.xml
examples/Demo/proj.win32/: Demo.vcxproj
examples/Demo/src/: TestText.h  TestTweenText.h
examples/DemoBox2D/build-proj.cmake-Desktop-Default/: DemoBox2D  cmake_install.cmake
examples/Match3/proj.android/: AndroidManifest.xml
examples/MyDemo/build-proj.cmake-Desktop-Debug/: CMakeCache.txt  Makefile  MyDemo.cbp  cmake_install.cmake
examples/MyDemo/build-proj.cmake-Desktop-Default/: CMakeCache.txt  Makefile  MyDemo  MyDemo.cbp  cmake_install.cmake
examples/MyDemo/src/: Player.cpp  Player.h
include/: BasisCamera.hpp  BasisEventProxy.hpp  BasisEvents.hpp  BasisObject.hpp  Box2DDebugDraw.hpp  CollisionInfo.hpp  CollisionManager.hpp  CommonData.hpp  Constants.hpp  DemoLevel.hpp  DynamicBox.hpp  Game.hpp  Ground.hpp  ICarrier.hpp  ICollisionManager.hpp  IDebugDrawable.hpp  IDrawable.hpp  IMovable.hpp  JsonImporter.hpp  MapProperty.hpp  Platform.hpp  Player.hpp  Utils.hpp  Velocity.hpp
main/: CMakeLists.txt
main/data/xmls/: ui.xml
main/examples/Demo/src/: TestPolygon.h  TestProgressBar.h  TestUserShader2.h  example.cpp
main/examples/DemoBox2D/build-proj.cmake-Desktop-Default/: Makefile
main/examples/DemoBox2D/proj.ios/DemoBox2D_ios.xcodeproj/: project.pbxproj
main/examples/DemoBox2D/src/: example.cpp
main/examples/Game/part1/build-proj.cmake-Desktop-Default/: Makefile
main/examples/Game/part1/proj.cmake/: CMakeLists.txt
main/examples/Game/part2/proj.android/: AndroidManifest.xml
main/examples/Game/part2/proj.cmake/: CMakeLists.txt  build_emsc.bat  build_emsc_release.bat
main/examples/Game/part2/proj.ios/GamePart2_ios.xcodeproj/: project.pbxproj
main/examples/Game/part5/build-proj.cmake-Desktop-Default/: CMakeCache.txt  GamePart5  cmake_install.cmake
main/examples/Game/part5/proj.ios/GamePart5_ios.xcodeproj/: project.pbxproj
main/examples/Game/part5/src/: Game.cpp
main/examples/HelloWorld/proj.win32/Debug_v140_xp/: vc140.idb
main/examples/HelloWorld/proj.win32/Debug_v140_xp/HelloWorld.tlog/: CL.read.1.tlog  CL.write.1.tlog  HelloWorld.lastbuildstate  link.command.1.tlog
main/examples/HelloWorld/src/: example.cpp
main/examples/MyDemo/proj.cmake/: CMakeLists.txt
main/examples/MyDemo/src/: Joystick.cpp  Player.cpp
main/include/: BasicCamera.hpp  BasisCamera.hpp  BasisEvents.hpp  BasisObject.hpp  Constants.hpp  DemoLevel.hpp  Game.hpp  Joystick.hpp  JsonImporter.hpp  MovementButton.hpp  Platform.hpp  Player.hpp  PlayerEvents.hpp  Utils.hpp
main/oxygine/SDL/android/lib/src/org/libsdl/app/: SDLActivity.java
main/oxygine/SDL/macosx/oxygine_macosx/oxygine_macosx.xcodeproj/: project.pbxproj
main/oxygine/SDL/qt/oxygine-framework/: oxygine-framework.pro
main/oxygine/SDL/win32/Debug_v140_xp/oxygine.tlog/: Lib-link.4436.read.1.tlog
main/oxygine/marmalade/: oxygine-framework.mkf
main/oxygine/src/: Actor.cpp  Actor.h  AsyncTask.h  Box9Sprite.h  Clock.h  DebugActor.h  Draggable.h  Font.cpp  InputText.h  MaskedRenderer.h  MaskedSprite.cpp  PointerState.cpp  PostProcess.h  Serializable.h  TextField.cpp  TextStyle.h  ThreadLoader.cpp  ThreadLoader.h  WebImage.h  oxygine_include.h
main/oxygine/src/core/: FileSystem.cpp  Mutex.h  NativeTexture.h  Object.h  Renderer.h  STDFileSystem.cpp  ThreadDispatcher.h  VideoDriver.h  ZipFileSystem.h  file.h  pixel.h  ref_counter.h
main/oxygine/src/core/android/: jniUtils.cpp  jniUtils.h
main/oxygine/src/core/gl/: NativeTextureGLES.cpp  ShaderProgramGL.cpp  ShaderProgramGL.h  VideoDriverGL.cpp  oxgl.h
main/oxygine/src/core/s3e/: HttpRequestTaskS3E.cpp
main/oxygine/src/dev_tools/: TexturesInspector.h  TreeInspectorPage.h
main/oxygine/src/math/: Vector4.h
main/oxygine/src/res/: ResAnim.h  ResBuffer.cpp  ResFont.cpp
main/oxygine/src/utils/: ImageUtils.cpp
main/oxygine/system_data/original/system/fonts/: mono.fnt
main/proj.android/: AndroidManifest.xml
main/proj.cmake/: CMakeLists.txt
main/src/: BasicCamera.cpp  BasicCamera.h  BasicEvents.h  BasisCamera.cpp  Box2DDebugDraw.cpp  DemoLevel.cpp  DemoLevel.h  Game.cpp  Game.h  Joystick.cpp  Joystick.h  JsonImporter.cpp  MovementButton.h  Platform.cpp  Player.cpp  Player.h  PlayerEventProxy.h  Unit.h  Utils.cpp  Utils.hpp  example.cpp  main.cpp
main/test/: CMakeLists.txt  JsonImporterTests.cpp  Tests.cpp
main/tools/: readme.txt
main/tools/templates/proj.android/: AndroidManifest.xml
main/tools/templates/proj.cmake/: CMakeLists.txt  build_emsc.bat
oxygine-framework/: license.txt
oxygine-framework/oxygine/src/: AnimationFrame.cpp  AnimationFrame.h  Button.h  ClipRectActor.cpp  ClipRectActor.h  Clock.cpp  ColorRectSprite.cpp  ColorRectSprite.h  DebugActor.cpp  Draggable.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  Font.h  HttpRequestTask.cpp  HttpRequestTask.h  Image.cpp  Input.h  Material.h  MemoryTexture.h  Polygon.cpp  Polygon.h  PostProcess.cpp  ProgressBar.cpp  ProgressBar.h  RenderState.h  STDMaterial.cpp  STDMaterial.h  STDRenderer.cpp  STDRenderer.h  SlidingActor.cpp  SlidingActor.h  Sprite.cpp  Stage.cpp  TouchEvent.h  Tween.cpp  Tween.h  TweenAlphaFade.h  TweenGlow.h  TweenOutline.cpp  (+12 more)
oxygine-framework/readme/: readme.txt
oxygine-framework/tools/: gen_template.py
oxygine/src/: Box9Sprite.cpp  Button.cpp  Image.h  Input.cpp  MaskedRenderer.cpp  MaskedSprite.h  PointerState.h  Serialize.h  Sprite.h  Stage.h  TextField.h  TweenAnim.h  initActor.h
proj.android/: settings.gradle
readme/: emscripten.txt
src/: BasisCamera.cpp  BasisObject.cpp  Box2DDebugDraw.cpp  CollisionManager.cpp  DemoLevel.cpp  DynamicBox.cpp  ICarrier.cpp  IMovable.cpp  JsonImporter.cpp  Platform.cpp  Player.cpp  Utils.cpp  Velocity.cpp  example.cpp  res.cpp
test/: CMakeLists.txt  CollisionManagerTests.cpp  DynamicBoxFake.cpp  DynamicBoxFake.hpp  PlatformFake.cpp  PlatformFake.hpp  PlayerFake.cpp  PlayerFake.hpp  TestExample.cpp  VelocityTests.cpp
tools/: oxyresbuild.py
tools/others/: build_oxygine_with_sdl.py  gen_templates.py
(+201 files in other folders)
